--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@types/mongoose": "^5.11.97",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
+    "i18next": "^25.3.0",
     "jotai": "^2.12.5",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-i18next": "^15.5.3",
+    "react-redux": "^9.2.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
