added admin also

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
+    "cheerio": "^1.1.0",
     "i18next": "^25.3.0",
     "joi": "^17.13.3",
     "jotai": "^2.12.5",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
